# pyzcode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
pyzcode/: data_loader.py  distance.py  query.py  utils.py
pyzipcode/: __init__.py  data_loader.py  exceptions.py  query.py
tests/: conftest.py  test_data_loader.py  test_distance.py  test_query.py  test_utils.py
